@@ -1131,7 +1131,7 @@ channels[850] = "S19.2E-1-1022-6915";
 channelsnames[851] = "Montagne TV (S)";
 channels[851] = "S19.2E-1-1020-7001";
 channelsnames[852] = "M6 (S)";
-channels[852] = "S19.2E-1-1074-8367";
+channels[852] = "S19.2E-1-1100-8706";
 
 channelsnames[900] = "EuroNews (S)";
 channels[900] = "S19.2E-1-1091-31220";
