@@ -6,6 +6,8 @@ VDR 1.7.29
 0.22	Updated EPG filter for 42E
 	Fix: Right month is now shown in recordings menu.
 	Added some channels for 42E to group 3
+	SmartwebTV timer handling added
+	Info about audio/video in Infobox when playing Recording
 
 
 0.21	Language in sepate file, link your lang_XXX.js to language.js to activate it.
